test: #88: fix color contrast violations

--- a/src/components/globals/TicketsPopup/TicketsPopup.scss
+++ b/src/components/globals/TicketsPopup/TicketsPopup.scss
@@ -181,6 +181,7 @@
     margin-top: 24px;
     padding: 12px;
     font-size: 16px;
+    background-color: $color-green;
     transition: all ease-out 0.3s;
 
     &:hover,
