--- a/src/components/home-page/Map/components/MapAddressCard/MapAddressCard.scss
+++ b/src/components/home-page/Map/components/MapAddressCard/MapAddressCard.scss
@@ -49,7 +49,7 @@
       @include caption-2-medium;
 
       white-space: pre-line;
-      color: $color-black-60;
+      color: $color-black-75;
     }
 
     @include tablet-xl {
@@ -88,7 +88,7 @@
   &__subtitle {
     @include caption-1-medium;
 
-    color: $color-black-60;
+    color: $color-black-75;
 
     @include tablet {
       @include caption-2-medium;
