--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -77,7 +77,7 @@ a {
 
 .text-link {
   text-decoration: underline;
-  color: $color-green;
+  color: $color-green-dark;
   transition: color ease-out 0.2s;
 
   &:focus,
